[package]
name = "Rust-Sandman"
version = "0.1.0"
authors = ["Harrison Burt <57491488+ChillFish8@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.7"
tokio = { version = "0.2", features = ["full"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
tokio-tungstenite = "0.11.0"
log = "0.4.11"
headers = "0.3.2"
futures-util = "0.3.5"
